# bls-javy

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  download.sh
.cargo/: config.toml
.github/workflows/: build-assets.yml  ci.yml
crates/apis/: Cargo.toml
crates/apis/src/: lib.rs
crates/apis/src/crypto/: crypto.js  mod.rs
crates/apis/src/fetch_io/: blockless.rs  fetch.js  mod.rs
crates/bless-plugins/: Cargo.toml
crates/cli/src/: bytecode.rs
crates/cli/src/codegen/: mod.rs
crates/cli/tests/: dylib_test.rs  dynamic_linking_test.rs  integration_test.rs
crates/core/: Cargo.toml
crates/javy/src/: alloc.rs
crates/runner/src/: lib.rs
