[package]
name = "javy-apis"
version = "2.1.1-alpha.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Configurable JavaScript runtime for WebAssembly"
homepage = "https://github.com/bytecodealliance/javy/tree/main/crates/apis"
repository = "https://github.com/bytecodealliance/javy/tree/main/crates/apis"
categories = ["wasm"]

[features]
console = []
fetch_io = ["dep:blockless-sdk", "dep:serde_json"]
random = ["dep:fastrand"]
stream_io = []
text_encoding = []

[dependencies]
anyhow = { workspace = true }
fastrand = { version = "2.0.1", optional = true }
javy = { workspace = true }
blockless-sdk = { version = "0.1.3", optional = true }
serde_json = { version = "1.0.108", optional = true }