[package]
name = "javy-bless-plugins"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "bless_plugins"
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
javy-plugin-api = { path = "../plugin-api", features = ["json"] }
blockless-sdk = { version = "0.1.6" }
